# Bomberman

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  justfile
Assets/Blizzard Battle/: avalanche.dae  avalanche.mtl  block.dae  block.mtl  map.dae  map.mtl
cmake/: Findraylib.cmake
documentation/html/: _a_data_8hpp_source.html  _a_i_8hpp_source.html  _a_window_8hpp_source.html  _animation_8hpp_source.html  _bomb_8hpp_source.html  _bomberman_8hpp_source.html  _crate_8hpp_source.html  _game_data_8hpp_source.html  _item_8hpp_source.html  _mouse_8hpp_source.html  _my_cameraman_8hpp_source.html  _render_8hpp_source.html  _round_8hpp_source.html  _save_8hpp_source.html  _vector_8hpp_source.html  annotated.html  annotated_dup.js  class_a_core-members.html  class_a_i.html  class_a_window.html  class_a_window.js  class_box_collider-members.html  class_box_collider.html  class_box_collider.js  class_cameraman-members.html  class_color_manager.html  class_color_manager.js  class_component-members.html  class_controller.html  class_controller.js  class_core-members.html  class_delta_time-members.html  class_error.html  class_fire.html  class_fire.js  class_fps_handler.html  class_game_data.html  class_game_data.js  class_home-members.html  class_model3_d-members.html  (+57 more)
documentation/html/search/: all_0.js  all_2.js  all_3.js  all_8.js  all_b.js  all_f.js  classes_10.js  classes_2.js  classes_3.js  classes_c.js  classes_e.js  functions_0.js  functions_10.js  functions_12.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_f.js
documentation/man/man3/: AudioDevice.3  Bomb.3  Core.3  Crate.3  DeltaTime.3  Error.3  Plane.3  Save.3  Scene.3  Splash.3  Sprite.3  Vector2D.3  Wall.3
documents/html/: _a_core_8hpp_source.html  _audio_device_8hpp_source.html  _box_collider_8hpp_source.html  _button_8hpp_source.html  _cameraman_8hpp_source.html  _collision_checker_8hpp_source.html  _color_8hpp_source.html  _component_8hpp_source.html  _controller_8hpp_source.html  _core_8hpp_source.html  _delta_time_8hpp_source.html  _entity_8hpp_source.html  _error_8hpp_source.html  _fire_8hpp_source.html  _fps_8hpp_source.html  _game_8hpp_source.html  _home_8hpp_source.html  _instance_of_8hpp_source.html  _load_8hpp_source.html  _model3_d_8hpp_source.html  _music_8hpp_source.html  _plane_8hpp_source.html  _player_8hpp_source.html  _player_select_8hpp_source.html  _rectangle_8hpp_source.html  _scene_8hpp_source.html  _sound_8hpp_source.html  _splash_8hpp_source.html  _sprite_8hpp_source.html  _text_8hpp_source.html  _timer_8hpp_source.html  _transform3_d_8hpp_source.html  _wall_8hpp_source.html  _window_8hpp_source.html  class_a_core.html  class_a_core.js  class_a_data-members.html  class_a_data.html  class_a_data.js  class_a_i-members.html  (+128 more)
documents/html/search/: all_1.js  all_11.js  all_12.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  functions_1.js  functions_11.js  functions_4.js  functions_8.js  functions_a.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js
documents/man/man3/: ACore.3  AData.3  AI.3  AWindow.3  Animation.3  BoxCollider.3  Button.3  Cameraman.3  CollisionChecker.3  ColorManager.3  Component.3  Controller.3  Entity.3  Fire.3  FpsHandler.3  Game.3  GameData.3  Home.3  Item.3  Load.3  Model3D.3  MouseHandler.3  MusicManager.3  MyCameraman.3  Player.3  PlayerSelect.3  RectangleManager.3  Render.3  SoundManager.3  TextHandler.3  Timer.3  Transform3D.3  Vector3D.3  WindowManager.3
include/Components/: BoxCollider.hpp  Render.hpp  Render3D.hpp  Transform3D.hpp
include/Engine/: Cameraman.hpp  Core.hpp  GameData.hpp  GameObject3D.hpp  Model3D.hpp  Scene.hpp  Settings.hpp
include/Engine/Components/: BoxCollider.hpp  Component.hpp  Controller.hpp  Render.hpp  Transform3D.hpp
include/Engine/Core/: Cameraman.hpp  Collision.hpp  Core.hpp  Entities.hpp  Entity.hpp  GameData.hpp  GameObject3D.hpp  HitBox.hpp  Model3D.hpp  Scene.hpp  Sprite.hpp
include/Engine/ECS/: Entity.hpp
include/Engine/Lib/: AudioDevice.hpp  Cameraman.hpp  Color.hpp  Controller.hpp  Font.hpp  Fps.hpp  Model3D.hpp  Mouse.hpp  Music.hpp  Rectangle.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Window.hpp
include/Engine/Tools/: Camera.hpp  Cameraman.hpp  Clock.hpp  Error.hpp  Models.hpp  Parser.hpp  Round.hpp  Save.hpp  Timer.hpp  Vector3Tools.hpp
include/Entities/: Bomb.hpp  Box.hpp  Crate.hpp  Entities.hpp  Explosion.hpp  Player.hpp  Wall.hpp
include/Indie/: Bomberman.hpp  Shortcuts.hpp
include/Indie/GameCore/: Bomberman.hpp  Core.hpp  GameData.hpp  MyCameraman.hpp  Save.hpp
include/Indie/Prefabs/: Bomb.hpp  Box.hpp  Crate.hpp  Explosion.hpp  Fire.hpp  Item.hpp  Player.hpp  Wall.hpp
include/Indie/Scenes/: EndGame.hpp  (+6 more)
include/Lib/: Fps.hpp  Sound.hpp
include/Prefabs/: Bomb.hpp  Box.hpp  Crate.hpp  Explosion.hpp  Fire.hpp  Item.hpp  Player.hpp  Wall.hpp
include/Scenes/: Game.hpp  Home.hpp  Scene.hpp
include/Tools/: Round.hpp  Shortcuts.hpp  Timer.hpp
src/: main.cpp
src/Components/: BoxCollider.cpp  Render.cpp  Render3D.cpp  Transform3D.cpp
src/Engine/: Cameraman.cpp  Collision.cpp  Core.cpp  GameData.cpp  Settings.cpp
src/Entities/: Bomb.cpp  Box.cpp  Crate.cpp  Explosion.cpp  Player.cpp  Wall.cpp
src/Lib/: Animation.cpp  AudioDevice.cpp  CMakeLists.txt  Cameraman.cpp  CollisionChecker.cpp  Color.cpp  Controller.cpp  DeltaTime.cpp  Fps.cpp  Model3D.cpp  Mouse.cpp  Plane.cpp  Round.cpp  Sound.cpp  Sprite.cpp  Text.cpp  Window.cpp
src/Lib/include/: AWindow.hpp  Animation.hpp  AudioDevice.hpp  Cameraman.hpp  CollisionChecker.hpp  Controller.hpp  DeltaTime.hpp  Fps.hpp  Model3D.hpp  Mouse.hpp  Music.hpp  Plane.hpp  Scene.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Window.hpp
src/Prefabs/: Bomb.cpp  Box.cpp  Crate.cpp  Explosion.cpp  Fire.cpp  Item.cpp  Player.cpp  Wall.cpp
src/Scenes/: Game.cpp  Home.cpp
src/Tools/: Timer.cpp
(+71 files in other folders)
